--- a/firstCode.html
+++ b/firstCode.html
@@ -4,6 +4,12 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>BoldFrame</title>
+    <style>
+      #BA{
+         background-color: blue;
+         width: 180px;
+      }
+    </style>
 </head>
 <body>
   <h3 style="position: absolute;top: 42px;right: 90px;color: blueviolet;margin-bottom: 0;font-size: 30;"><i>WEB DEVELOPER</i></h3>
@@ -24,5 +30,20 @@
 <tr><td><b><i>2.PLAYING GAMES</i></b></td></tr>
 <tr><td><b><i>3.WATCHING MOVIES</i></b></td></tr>
    </table>
+   <audio controls>
+<source src="inner-echoes-271416 (1).mp3" type="audio/mp3">
+   </audio>
+   <video  width="450px" controls>
+   <source src="1. Course Overview.mp4" type="video/mp4">
+   </video>
+  <div id="BA">
+   <form action="">
+      <label for="First Name">FIRST NAME</label><br>
+      <input type="text" id="First Name"><br>
+      <label for="">PASSWORD</label> <br>
+      <input type="password" id="Password"> 
+   </form>
+  </div>
+   
 </body>
 </html>
